--- a/apps.json
+++ b/apps.json
@@ -5,7 +5,7 @@
             "link": "https://t.me/Noobie_TRX?text=Привет!%20хочу%20купить%20WinLocker",
             "description": "Программа, блокирующая Windows. Имеет встроенный чат. После покупки разработчик все для вас настроит.",
             "fg_color": "gray",
-            "price": "100"
+            "price": "НЕТ В НАЛИЧИИ"
         },
         {
             "title": "Jarvis",
